--- a/formiguinha/index.html
+++ b/formiguinha/index.html
@@ -1,9 +1,4 @@
-<!--
-  index.html
-  Site romântico responsivo (mobile-first) — versão adaptada
-  Matheus — Armandilho fez pra você. :)
-  Abra este arquivo no navegador (Chrome/Firefox/Safari)
--->
+
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -98,6 +93,7 @@
       <!-- Tabs -->
       <nav class="tabs" role="navigation" aria-label="Navegação principal">
         <button class="tab-btn active" data-tab="home" aria-label="Home">Home</button>
+        
         <button class="tab-btn" data-tab="coisas" aria-label="Coisas que me lembram tu">Coisas</button>
         <button class="tab-btn" data-tab="cartinhas" aria-label="Cartinhas de amor">Cartinhas</button>
 <a href="baitola/index.html" class="tab-btn" aria-label="Declaração">Declaração🐜</a>
@@ -191,7 +187,7 @@
   <div id="galeria-full" class="slides"></div>
   <button class="next">&#10095;</button>
 </div>
-
+      </section>
 
       <!-- Cartinhas de amor --><section id="tab-cartinhas" class="tab-panel">
         <div class="full-header">
